# pesapal-junior-programmer-challenge-2024

./: .pdm-python  README.md  pyproject.toml  solutions.md  the-challenges.md
image-hash-spoofer/: go.mod  spoof.go
source-control-system/: README.md  mini-git.py  pyproject.toml
source-control-system/repo/snapshots/snapshot-0/: message.txt
source-control-system/repo/working/: example.py
