[project]
name = "pesapal-junior-programmer-challenge-2024"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Antony Nyagah", email = "tony.m.nyagah@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
